--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,6 @@ benchmarks/WIKI5M/wikidata5m_inductive_valid.txt
 benchmarks/WIKI5M/wikidata5m_transductive_test.txt
 benchmarks/WIKI5M/wikidata5m_transductive_train.txt
 benchmarks/WIKI5M/wikidata5m_transductive_valid.txt
+benchmarks/WIKI5M/test2id.txt
+benchmarks/WIKI5M/train2id.txt
+benchmarks/WIKI5M/valid2id.txt
